<resources>
    <string name="app_name">pac-pmdm</string>
    <string name="activity1">Activity1</string>
    <string name="activity2">Activity2</string>
    <string name="activity3">Activity3</string>
    <string name="activity4">Activity4</string>
    <string name="crear_tabla">Crear tabla</string>
    <string name="insertar_datos">Insertar datos</string>
    <string name="consultar_datos">Consultar datos</string>
    <string name="volver_a_activity_1">Volver a Activity1</string>
    <string name="phone">Teléfono</string>
    <string name="name">Nombre</string>
    <string name="save">guardar</string>
    <string name="camera">Cámara</string>
</resources>